--- a/Scrape_Abgeordnete_2.qmd
+++ b/Scrape_Abgeordnete_2.qmd
@@ -18,7 +18,12 @@ This script will scrape the profile pages of the Abgeordneten for information ab
 ```{r}
 profile_urls <- politicians$Profile
 
-data <- data.frame(ID = numeric(), No_of_answers = numeric(), No_of_questions = numeric())
+data <- data.frame(
+  ID = numeric(), 
+  No_of_answers = numeric(), 
+  No_of_questions = numeric(),
+  No_of_question_pages = numeric()
+  )
 
 for (i in 1:length(profile_urls)) {  
   
@@ -45,8 +50,14 @@ for (i in 1:length(profile_urls)) {
     str_split("/open-data/info/politician/") 
   id <- as.numeric(id[[1]][2])
   
+  # extract the number of question pages
+  page <- html_element(html, "div.l-grid__col > nav ul > li:last-child > a") %>%
+    html_attr("href") %>%
+    str_split("=")
+  page <- as.numeric(page[[1]][2])
+  
   # add data to dataframe
-  data <- rbind(data, list(id, questions_answered, questions_asked))
+  data <- rbind(data, list(id, questions_answered, questions_asked, page))
 }
 ```
 
