--- a/Scrape_Abgeordnete_4.qmd
+++ b/Scrape_Abgeordnete_4.qmd
@@ -15,7 +15,7 @@ library(jsonlite)
 library(httr)
 
 # load data
-politicians <- fromJSON("C:\\Users\\shado\\Documents\\Abgeordnete_Kommunikation\\abgeordnetenwatch_data.json")
+politicians <- fromJSON("C:\\Users\\shado\\Documents\\Abgeordnete_Kommunikation\\abgeordnetenwatch_data - Kopie.json")
 ```
 
 ```{r}
@@ -66,7 +66,7 @@ politicians$Residence <- residence
 
 ```{r}
 # export updated data
-politicians <- toJSON(politicians, pretty = TRUE)
+politicians_json <- toJSON(politicians)
 
-write(json_data, file = "abgeordnetenwatch_data.json")
+write(politicians_json, file = "abgeordnetenwatch_data.json")
 ```
