--- a/Scrape_Abgeordnete_4.qmd
+++ b/Scrape_Abgeordnete_4.qmd
@@ -36,7 +36,7 @@ for (id in 1:length(politicians$ID)) {
   if (is.null(dat$data$year_of_birth)) {
     year_of_birth <- append(year_of_birth, "")
   } else {
-    year_of_birth <- append(year_of_birth, dat$data$year_of_birth)
+    year_of_birth <- append(year_of_birth, as.numeric(dat$data$year_of_birth))
   }
   
   
