--- a/Scrape_Abgeordnete_1.qmd
+++ b/Scrape_Abgeordnete_1.qmd
@@ -106,5 +106,6 @@ for (i in page_num)  {
 
 ```{r}
 # export the politicians as csv
-write.csv(politicians, "C:\\Users\\shado\\Documents\\Abgeordnete_Kommunikation\\politicians_1.csv", row.names = FALSE)
+# the path has to updated
+write.csv(politicians, "Your\\file\\path\\politicians_1.csv", row.names = FALSE)
 ```
