--- a/Scrape_Abgeordnete_1.qmd
+++ b/Scrape_Abgeordnete_1.qmd
@@ -107,5 +107,5 @@ for (i in page_num)  {
 ```{r}
 # export the politicians as csv
 # the path has to be updated
-write.csv(politicians, "Your\\file\\path\\politicians_1.csv", row.names = FALSE)
+write.csv(politicians, "politicians_1.csv", row.names = FALSE)
 ```
